--- a/Aula_10_Cores2_Exercicio/src/output.css
+++ b/Aula_10_Cores2_Exercicio/src/output.css
@@ -558,6 +558,21 @@ video {
   display: flex;
 }
 
+.size-6 {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.size-8 {
+  width: 2rem;
+  height: 2rem;
+}
+
+.size-24 {
+  width: 6rem;
+  height: 6rem;
+}
+
 .items-center {
   align-items: center;
 }
@@ -704,6 +719,10 @@ video {
   padding: 0.5rem;
 }
 
+.p-7 {
+  padding: 1.75rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -727,6 +746,15 @@ video {
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .font-bold {
